@@ -1,15 +1,15 @@
 pkgbase = lwjgl
 	pkgdesc = Lightweight Java Game Library - for use in game projects in Java.
-	pkgver = 2.8.4
+	pkgver = 2.8.5
 	pkgrel = 1
 	url = http://lwjgl.org/
 	changelog = ChangeLog
 	arch = any
 	license = BSD
 	options = !strip
-	source = http://downloads.sourceforge.net/java-game-lib/lwjgl-2.8.4.zip
-	md5sums = 6f943316819aa0c413190096df16f5d9
-	sha1sums = 3812c04dc0ccce1d4926d64dab298be62ea06ca8
+	source = http://downloads.sourceforge.net/java-game-lib/lwjgl-2.8.5.zip
+	md5sums = 1e08ec6ac655599560a3bbecdee2a11d
+	sha1sums = 615937bea17532d953c812ae60dbbe561337187f
 
 pkgname = lwjgl
 
