@@ -1,3 +1,9 @@
+2012-11-05 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
+
+	* lwjgl-2.8.5-1 :
+	Simple version bump.
+	See http://lwjgl.org/forum/index.php?topic=4798 for version changes.
+
 2012-06-09 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
 
 	* lwjgl-2.8.4-1 :
